# JanSevaEnv

./: .gitignore  Dockerfile  README.md  _t.txt  inference.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  test_a.txt
.claude/: settings.local.json
README.md/: ---.txt
app/: app.py  document_extractor.py  environment.py  main.py  models.py
app/data/: cases.json  taxonomy.json
app/rewards/: reward_fn.py
app/routers/: api.py
app/schemes/: policies.py  resolutions.py  root_causes.py
app/static/: index.html
app/tasks/: __init__.py  task1.py  task2.py  task3.py
server/: app.py
