[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janseva-env"
version = "1.0.0"
description = "Indian welfare and pension grievance resolution RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.openenv]
name = "JanSevaEnv"
version = "1.0.0"
entry_point = "server.app:main"
inference_script = "inference.py"
spec = "openenv.yaml"
docker = "Dockerfile"
modes = ["docker", "python"]

[project.scripts]
server = "server.app:main"
